# mcp_pride_archive_search

./: Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
mcp_pride_archive_search/: __init__.py  config.py  server.py
mcp_pride_archive_search/services/: __init__.py  search_service.py
mcp_pride_archive_search/utils/: __init__.py  logging.py
